# Coursework

./: Author.cpp  Author.h  Book.cpp  Book.h  BookIsInFile.h  Bookstand.cpp  Bookstand.h  CMakeLists.txt  ErroOpening.h  FileReader.h  InstructionReader.h  InvalidInput.h  InvalidInputInt.h  InvalidInputString.h  People.cpp  People.h  Person.cpp  Person.h  Reader.cpp  Reader.h  SameID.h  WrongChoice.h  WrongInputData.h  WrongPassword.h  main.cpp
Database/: Author+Book.txt  Books.txt  Bookstands.txt  Instruction.txt  Logs.txt  Reader.txt
